welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:20: error: type mismatch;
 found   : Unit
 required: Int
	i=i+1
         ^countTeen:19: error: type mismatch;
 found   : Unit
 required: Int
if (d<=19 && d>=13){
^